--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -4,8 +4,9 @@
 // Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
+$annie-green: #6DECAF
 
-$primary: $kaldi-red
+$primary: $annie-green
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
@@ -18,7 +19,7 @@ $black: #2b2523
   margin-bottom: 0
   margin-left: 0
   margin-right: 1.5rem
-  margin-top: 1.5rem
+  margin-top: 1rem
   display: flex
   flex-wrap: wrap
   justify-content: left
