center background img

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -38,7 +38,7 @@ $black: #2b2523
   right: 50%
   margin: 2em -50vw
   background-size: cover
-  background-position: bottom
+  background-position: center
   display: flex
   justify-content: center
   align-items: center
@@ -47,7 +47,7 @@ $black: #2b2523
     width: 100vw
     height: 400px
     background-size: cover
-    background-position: bottom
+    background-position: center
     display: flex
     justify-content: center
     align-items: center
@@ -62,7 +62,7 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: $primary
     text-align: center
     -webkit-box-shadow: inset 0 0 0 2px #CC3700
     box-shadow: inset 0 0 0 2px #f40
