--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,6 +11,9 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
+.navbar 
+  position: fixed
+
 .navbar .navbar-menu
   box-shadow:none !important
 
