Update navbar styling and logo

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -37,7 +37,7 @@ $black: #2b2523
 // Helper Classes
 .full-width-image-container
   width: 100vw
-  height: 400px
+  height: 60vh
   position: relative
   left: 50%
   right: 50%
@@ -50,7 +50,7 @@ $black: #2b2523
 
 .full-width-image
     width: 100vw
-    height: 400px
+    height: 60vh
     background-size: cover
     background-position: center
     display: flex
