--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,6 +11,11 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
+
+p
+  font-size: 1.2em;
+    
+
 .navbar 
   z-index: 100 !important
   position: fixed !important
