--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -53,9 +53,12 @@ p
   justify-content: center
   align-items: center
 
+.main-hero
+  opacity: 0.7
+
 .full-width-image
     width: 100vw
-    height: 60vh
+    height: 70vh
     background-size: cover
     background-position: center
     display: flex
@@ -89,8 +92,7 @@ p
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
-.navbar-brand .navbar-item.logo
-  padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
