--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -97,6 +97,15 @@ footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
+.has-text-annie-green 
+  color: #75b79e !important 
+
+.has-text-green
+  color: #388E3C !important
+
+.has-text-lighter-green 
+  color: #4CAF50 !important
+
 //Menu overrides
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
