--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,7 +11,6 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
-
 p
   font-size: 1.2em;
     
@@ -92,6 +91,12 @@ p
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
+
+.shamrock-row 
+  display: flex
+  justify-content: space-evenly
+  margin: 1.5em 0
+
 
 footer.footer
   padding: 3rem 0rem 0rem
