--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -74,7 +74,7 @@ p
   align-items: center
 
 .main-hero
-  opacity: 0.7
+  opacity: 1
 
 .full-width-image
     width: 100vw
@@ -101,6 +101,11 @@ p
     box-shadow: inset 0 0 0 2px $primary
     -webkit-transition: all .15s ease
     transition: all .15s ease
+    
+.big-btn
+  padding: 15px 19px 13px
+  font-size: 24px
+  font-size: 1.4rem
 
 .margin-top-0
   margin-top: 0 !important
@@ -177,6 +182,10 @@ $menu-label-color: $white-ter
 .menu-list
   list-style: none !important
   text-align: left
+.menu-list .navbar-item 
+  &:hover
+    background-color: #63c786
+    color: #FFFFFF !important
 .social
   padding: 2em
 .social a
