Update social icons

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -189,14 +189,14 @@ $menu-label-color: $white-ter
 .social
   padding: 2em
 .social a
-    padding: .5em .5em .3em .5em
-    border-radius: 1em
+    padding: .5em
+    border-radius: 50%
     background-color: $white-ter
     margin: .5em
-    width: 1em
-    height: 1em
+    height: 50px
+    width: 50px
     vertical-align: middle
-    display: inline
+    display: inline-block
 
 // blog roll
 .blog-list-item.is-featured
