--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -73,9 +73,6 @@ p
   justify-content: center
   align-items: center
 
-.main-hero
-  opacity: 1
-
 .full-width-image
     width: 100vw
     height: 70vh
@@ -187,16 +184,27 @@ $menu-label-color: $white-ter
     background-color: #63c786
     color: #FFFFFF !important
 .social
-  padding: 2em
-.social a
-    padding: .5em
+  padding: 1em
+  display: flex
+  .is-in-footer
+    margin: 0 auto
+.social-container
+    display: flex
+    align-items: center
+    justify-content: center
     border-radius: 50%
-    background-color: $white-ter
-    margin: .5em
-    height: 50px
-    width: 50px
+    background-color: #a8f879
+    padding: .5em
+    margin: 0 .5em
+    height: 60px
+    width: 60px
     vertical-align: middle
-    display: inline-block
+    &:hover
+      background-color: darken(#a8f879, 15%)
+    a
+      margin: 0 auto
+
+
 
 // blog roll
 .blog-list-item.is-featured
