display phone button on nav on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -34,7 +34,22 @@ p
 .navbar-logo
   filter: invert(76%) sepia(100%) saturate(3199%) hue-rotate(347deg) brightness(97%) contrast(108%)
   height: 100%
-  width: 80px
+  width: 50px
+
+.phone-btn
+  display: none !important
+  margin-left: auto
+  span
+    margin-right: .7em
+    color: #DEC631
+    font-size: 1.5em
+    font-weight: bold
+  @media screen and (max-width: 768px)
+    display: flex !important
+    align-items: flex-end
+    
+    
+  
 
 .navbar .navbar-item 
   color: #FFF
