--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -41,7 +41,7 @@ p
   margin-left: auto
   span
     margin-right: .7em
-    color: #DEC631
+    color: #f5dc38
     font-size: 1.5em
     font-weight: bold
   @media screen and (max-width: 1024px)
