--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -48,9 +48,6 @@ p
     display: flex !important
     align-items: flex-end
     
-    
-  
-
 .navbar .navbar-item 
   color: #FFF
   &:hover
@@ -63,8 +60,46 @@ p
   @media screen and (max-width: 769px)
     width: 90vw
 
+//bottom row of main hero
+.hero-bottom-row
+  width: 100%
+  bottom: 0
+  display: flex
+  align-items: flex-end
+  align-self: flex-end
+  position: absolute
 
+.bbb-logo
+  margin-left: auto
+  align-self: flex-end
+  width: 240px
+  height: 70px
+  @media screen and (max-width: 1000px)
+    width: 150px
+    height: 50px
+  @media screen and (max-width: 769px)
+    justify-self: center
+    align-self: center
+    margin: 0 auto
+.truck-in-hero
+  align-self: flex-end
+  justify-self: flex-end
+  width: 250px
+  height: 170px
+  @media screen and (max-width: 1024px)
+    display: none
+.truck-under-hero
+  width: 500px
+  height: 340px
+  @media screen and (min-width: 1024px)
+    display: none
+.secondary-tagline
+  padding-top: 1em
+  @media screen and (max-width: 900px)
+    display: none
+  
 
+//content
 .content .taglist
   list-style: none
   margin-bottom: 0
@@ -88,9 +123,11 @@ p
   left: 0
   top: 0
   background-size: cover
-  background-position: center
+  background-position: center bottom
   display: flex
+  flex-direction: column
   justify-content: center
+  text-align: center
   align-items: center
   h1
     box-shadow: 0.5rem 0 0 #48c774, -0.5rem 0 0 #48c774
@@ -105,8 +142,6 @@ p
       font-size: 2.7rem !important
 
 
-
-
 .full-width-image
     width: 100%
     height: 100%
@@ -115,7 +150,6 @@ p
     display: flex
     justify-content: center
     align-items: center
-    
 
 .btn
     display: inline-block
@@ -192,11 +226,22 @@ footer.footer
 .has-text-annie-green 
   color: #75b79e !important 
 
+.has-text-darker-green
+  color: #07683A !important
+  -webkit-text-stroke-width: .027em
+  -webkit-text-stroke-color: #FFEB3B
+
+.has-text-dark-green
+  color: #07683A !important
+
 .has-text-green
   color: #388E3C !important
 
 .has-text-lighter-green 
   color: #4CAF50 !important
+
+.has-text-super-bold
+  font-weight: 900 
 
 //Menu overrides
 $menu-item-color: $white-ter
