--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -129,9 +129,8 @@ p
 .full-width-image-container
   width: 100%
   height: 60vh
+  margin: 0 auto
   position: relative
-  left: 0
-  top: 0
   background-size: cover
   background-position: center bottom
   display: flex
@@ -145,7 +144,7 @@ p
     color: white
     padding: 1.3rem
   @media screen and (max-width: 768px)
-    height: 50vh
+    height: 60vh
     h1
       box-shadow: 0.3rem 0 0 #48c774, -0.3rem 0 0 #48c774
       padding: 1rem
@@ -160,6 +159,11 @@ p
     display: flex
     justify-content: center
     align-items: center
+
+.pricing-page-hero
+  background-image: url('../../public/img/pricing-page-hero.jpg')
+  @media screen and (max-width: 768px)
+    background-image: url('../../public/img/pricing-page-hero-mobile.jpg')
 
 .btn
     display: inline-block
