--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -139,14 +139,13 @@ p
   text-align: center
   align-items: center
   h1
-    box-shadow: 0.5rem 0 0 #48c774, -0.5rem 0 0 #48c774
-    background-color: #48c774
-    color: white
+    background: rgba(72, 199, 116, 0.7)
+    border-radius: 7px
+    color: white!important
     padding: 1.3rem
   @media screen and (max-width: 768px)
     height: 60vh
     h1
-      box-shadow: 0.3rem 0 0 #48c774, -0.3rem 0 0 #48c774
       padding: 1rem
       font-size: 2.7rem !important
 
