Add CMS for items we take

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -286,14 +286,14 @@ $menu-label-color: $white-ter
     align-items: center
     justify-content: center
     border-radius: 50%
-    background-color: #a8f879
+    background-color: #d4ecc6
     padding: .5em
     margin: 0 .5em
     height: 60px
     width: 60px
     vertical-align: middle
     &:hover
-      background-color: darken(#a8f879, 15%)
+      background-color: darken(#d4ecc6, 15%)
     a
       margin: 0 auto
 
