fix bg image on pricing page

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -160,9 +160,9 @@ p
     align-items: center
 
 .pricing-page-hero
-  background-image: url('../../public/img/pricing-page-hero.jpg')
+  background-image: url('../img/pricing-page-hero.jpg')
   @media screen and (max-width: 768px)
-    background-image: url('../../public/img/pricing-page-hero-mobile.jpg')
+    background-image: url('../img/pricing-page-hero-mobile.jpg')
 
 .btn
     display: inline-block
